# ChangeLog for kde-misc/magneto-kde
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/magneto-kde/ChangeLog,v 1.34 2013/08/22 11:16:24 lxnay Exp $

*magneto-kde-216 (22 Aug 2013)

  22 Aug 2013; Fabio Erculiani <lxnay@gentoo.org> +magneto-kde-216.ebuild:
  version bump

*magneto-kde-189 (02 Apr 2013)

  02 Apr 2013; Fabio Erculiani <lxnay@gentoo.org> +magneto-kde-189.ebuild:
  version bump

*magneto-kde-183 (14 Mar 2013)

  14 Mar 2013; Fabio Erculiani <lxnay@gentoo.org> +magneto-kde-183.ebuild:
  version bump

*magneto-kde-144 (27 Sep 2012)

  27 Sep 2012; Fabio Erculiani <lxnay@gentoo.org> +magneto-kde-144.ebuild:
  version bump

  24 Aug 2012; Fabio Erculiani <lxnay@gentoo.org> -magneto-kde-1.0_rc90.ebuild:
  drop older version 1.0_rc90

  24 Aug 2012; Fabio Erculiani <lxnay@gentoo.org> -magneto-kde-1.0_rc87.ebuild:
  drop older version 1.0_rc87

  24 Aug 2012; Fabio Erculiani <lxnay@gentoo.org> -magneto-kde-1.0_rc80.ebuild:
  drop older version 1.0_rc80

  24 Aug 2012; Fabio Erculiani <lxnay@gentoo.org> -magneto-kde-1.0_rc77.ebuild:
  drop older version 1.0_rc77

  24 Aug 2012; Fabio Erculiani <lxnay@gentoo.org> -magneto-kde-1.0_rc76.ebuild:
  drop older version 1.0_rc76

  24 Aug 2012; Fabio Erculiani <lxnay@gentoo.org> -magneto-kde-1.0_rc59.ebuild:
  drop older version 1.0_rc59

  24 Aug 2012; Fabio Erculiani <lxnay@gentoo.org> -magneto-kde-1.0_rc53.ebuild:
  drop older version 1.0_rc53

  24 Aug 2012; Fabio Erculiani <lxnay@gentoo.org> -magneto-kde-1.0_rc43.ebuild:
  drop older version 1.0_rc43

  24 Aug 2012; Fabio Erculiani <lxnay@gentoo.org> -magneto-kde-1.0_rc38.ebuild:
  drop older version 1.0_rc38

  24 Aug 2012; Fabio Erculiani <lxnay@gentoo.org>
  -magneto-kde-1.0_rc124.ebuild:
  drop older version 1.0_rc124

*magneto-kde-136 (24 Aug 2012)

  24 Aug 2012; Fabio Erculiani <lxnay@gentoo.org> +magneto-kde-136.ebuild:
  version bump

*magneto-kde-1.0_rc124 (11 Jul 2012)
