@@ -1,12 +1,10 @@
-DIST entropy-136.tar.bz2 1612759 SHA256 4384b251f259c868f8ee3480701beecb466ca8c5727915e6b437291d03f4c63b SHA512 3b2725de557efa76ee65f368f486ab952f49a63474b5226e7b9ce137bee1c9c1ef73074c4d255e3d8695666556923d827c9cb1e232b307c4893d76e6cc6fb948 WHIRLPOOL 222d2c292c4a7c0d465be31898c4b2bf1469b7c769b4099106ded24334f4d16dde1f95ea532cbb2a167e2b7fcc30e6f59974839c3a8019c02c962fc634556e1b
 DIST entropy-144.tar.bz2 1616075 SHA256 173825d13f4b5c5aecf4d82b4e593921baf2209496be56190babbb142ad9b75d SHA512 30ca32fdf0747530c656ec9c96aed5dad00e8fb4181bd4c2e4a4aed3c5b06427e5b07baa41db13ff03d6730f13607e86f557aad84cb6e85af5d9c49029a911c7 WHIRLPOOL a14b76a2c247e2d4db12e2c78735c64ca183a474758f8b8ab9748cd93378300cd737377888beb03cc64e0ddeff0cb201fd790489ddfee48b8cf82032429509ac
 DIST entropy-183.tar.bz2 1685003 SHA256 5b2d99ef61a68497c228c392d607faa7fef9b5debe7628f381e4facbef290f38 SHA512 95b83797fc519c5cfd12a985ee3221ffe83fe19289681ca1b0f022a7b9491bdf9b74a06fe4f010536a22db78bac4f3325fc5eab0c11243240fdee5789690e2aa WHIRLPOOL bbd6c44e5bce24e602f89075e126b5e914900aad8bd3b1ff301c733d8838f4cd1aac279a707f81c0873c24259078e5fdc9dacbf1f30d0fd5eef3aa9f9376f7c5
 DIST entropy-189.tar.bz2 18411813 SHA256 5043ae83953c9d497c6bbeb58111bde36f51b895a8c3bed051ded9f00cbe1b96 SHA512 03b9ee7a7453ff78aae00b0441ae765406f05a8b2060b239bea10703d78e68a770bd526c5f72e3534d80733c44475a90b61289c1315d3ba9c17d2f7f713348cd WHIRLPOOL 9ce23fcb4480b7cb315b54be8e908b5e364aa222ba95f399679f9d8584d355c2638eb248e4ed80bbf13ceaad89ce07cf18b24912bb7bfd6647d7db186db77f02
 DIST entropy-216.tar.bz2 18429942 SHA256 c2569d7233b80b9373cde11645e6e9c4142038387ad4aa8943ed1ddfeb86f501 SHA512 8b6a19f311520ca48a998aadb10717f5ad81eb8c26b71c1f8a8b67f84fd9876117adf650eb4fa59893130fd3db669ba370804a33311fe7eff45546a5a92e6b7d WHIRLPOOL b220b870f099cfe014ad355760855dc91bbc11c76f39b34e03ec251e1f8f9bdf04bb4f1dd0ad9e0c5e63a4328f6c9691abd4f9e759b8546fac7026386b4c174b
-EBUILD magneto-kde-136.ebuild 942 SHA256 cc2ad381f20ccddc299231f85f834abc1facdd107bf3aa6897ecabd4be658525 SHA512 c09de9b4e75372e22009f84799d0c79bcc25ac9bb763672566ac6526498ae8252139650bece87607e8ceafb1c39ca57f7647a0e462b620f242857f0c55a3a19b WHIRLPOOL 9f70d4ee06681f6b0a2dd36729cd6e388ea3ad9733fc8a891e6e8e059283e0f2ce5db077d8ddece5f5eb3d364cae56baed94b41d27badb4fc9f329da4c6a1911
 EBUILD magneto-kde-144.ebuild 942 SHA256 db74656ed4bb1f7d04ce8a6ea728a96a499d602f4f03061643ebb2b1873e91ef SHA512 791d57ed7970d641859ba9be62bc04aab9852dee3fb8e7fc49c79de982f5add6380b85011b3eff0b2c41f9789882278c45dadd414fa1137909aa03d1737f422f WHIRLPOOL 2861f7861db1c0fcec927479cf1d09336e9eb7fcff15e10a1acd40480b7c072b11ab6c10f434811f95262aaaca113bde0e06d073cb47167bcd8ce9dfc61f7a8d
 EBUILD magneto-kde-183.ebuild 942 SHA256 9375ce6ab2f70385e6a5f881ebbb5f0f08cb119bb4e10ce8a3c5148963a2050f SHA512 195d56a53c0e59fcf5515def919a5d3caf8e2a814fb41a83a2dfcbc03094f240b97fb52e9e68292a69aeab9b47e5055d2464c7b32a7c15dfb33f03808059ee20 WHIRLPOOL 465f5e990c2c390187ca5be18486b0234f69a46c9226089ce977cc6aa3ec2e17aeb672e7ae88311344eb04cc78b75f60966a4d595bffd4f05c093d33632f0dd4
 EBUILD magneto-kde-189.ebuild 942 SHA256 aa9990017c36d439b0682a2d0a227b909187dd02943c0ec5023c041601556e37 SHA512 6931b58f5b2e5d2d1fa46425b93d845ccef29654d0efe4fa8e2794a59f03710cc88a50be7feeade10760cb55d46510c8327e303517987c49706fc12372db5dba WHIRLPOOL 2ea00f946c51f218f11c196bb2b3d79058509fa90dba8767ba9a80c5755f9c910e9be59cca9fe6ee323fa6b95c9685ae7240bef8bfa705434b92d93641ad5aef
 EBUILD magneto-kde-216.ebuild 942 SHA256 8a8eb3a8c519481d616452835e5f0a3c658e09a84a7c8ea52a7e2bdd5efdd368 SHA512 1872b2f3fa2f2ef160e26e3d9cbd4f80a76d1d5e16a133eefca309f06898fff0b389e22226611df8aca66983a4c3d9eed797afe7dbbbd58e05f2ea6efafbc1e6 WHIRLPOOL dfc7df086a370cb75e350e499e8d3954decdb787b6f86092c8dfb6fedc52a18e06f537c1eb2e3017e27d508009b839f63581ab81686604970dcc59fbe52266c8
-MISC ChangeLog 4368 SHA256 d9d1834dfc56f9f3807c1978eba65e6b3edd8b779276f70482af73cbbb441dc2 SHA512 49ebcc521b1d624cd1b6990e3a5c47db173bed3cb14141a5a4004a8d8560c513233a6ae06a8864f652c568576a9bbac2311dd1db6a9e6acc658b9addf85dac82 WHIRLPOOL 02ffdff4fe3fd2307eee05f21068f0ead7eb4d9d933934db99127b2394fe740bd66d2b335f657c8f4aeed8de6641e83cd00c9b39f33fc33dacde6a101459f350
+MISC ChangeLog 4469 SHA256 7d9a8905dd345449b48252449deebeb253458791cf3c779915e0fd425e142055 SHA512 db810b489205b9bd793b562ba5c1a7c29f0ade3ef7d045963b7c4b931a7fa7726603f038a0eda4f329c6e1274a6ec2dbc0f3e9866002f3214f3b89c2b0a1e0aa WHIRLPOOL 5fa871944bc3453596e9574f6b15d43a438207739b32f75656be224715cc76759f68bbb9e05c9d3cca4f4be21c2424b895834d92ecb2a7f55f9a89257da7aa82
 MISC metadata.xml 249 SHA256 c8f6c77ed785305b3c81640d0f8aefd1e0979c446458117922d2ba8979e2f53f SHA512 e90f800cf4b5909428161ee7577c8599e094765bcf366b151fe21c23c78b84df015e5ea766967e6d7f02d87e2fe1293d508a28b682bc7fcb395a47acbd741b16 WHIRLPOOL a34e9bb9649faaed8ccc588236a567453f3ef4990771cd27e9ebe3dfa37ecd7876f248c3ffa9a3f10ed1664f1be12c7d56d89375e41e2ceaa19b1439b32a833d
