@@ -1,6 +1,9 @@
 # ChangeLog for kde-misc/magneto-kde
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/magneto-kde/ChangeLog,v 1.34 2013/08/22 11:16:24 lxnay Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/magneto-kde/ChangeLog,v 1.35 2013/08/22 11:20:49 lxnay Exp $
+
+  22 Aug 2013; Fabio Erculiani <lxnay@gentoo.org> -magneto-kde-136.ebuild:
+  drop older version 136
 
 *magneto-kde-216 (22 Aug 2013)
 
